# Ev_Compl_3

./: LICENSE  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt
Scripts/: database.py  main.py  models.py  queries.py  scraper.py  seed.py
evaluación_complementaria_3/: __init__.py  dataset.py  features.py  plots.py
evaluación_complementaria_3/modeling/: predict.py  train.py
