[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "evaluaci\u00f3n_complementaria_3"
version = "0.0.1"
description = "Evaluaci\u00f3n Complementaria 3: Scrapping"
authors = [
  { name = "Gonzalo Tello" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["evaluación_complementaria_3"]
force_sort_within_sections = true


